--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@
                     <div class="mechanism-detailed">
                         <div class="mechanism-item">
                             <div class="mechanism-header">
-                                <span class="mechanism-icon">📡</span>
+                                <span class="mechanism-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><circle cx="12" cy="12" r="10"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/><path d="M2 12h20"/></svg>
+                                </span>
                                 <h3>Technology Diffusion</h3>
                             </div>
                             <p>Developing economies can adopt technologies already developed in advanced economies, avoiding the costs and risks of frontier innovation. This "advantage of backwardness" (Gerschenkron) allows rapid productivity gains.</p>
@@ -340,7 +342,9 @@
 
                         <div class="mechanism-item">
                             <div class="mechanism-header">
-                                <span class="mechanism-icon">🔄</span>
+                                <span class="mechanism-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/></svg>
+                                </span>
                                 <h3>Structural Transformation</h3>
                             </div>
                             <p>Shifting labor from low-productivity agriculture to higher-productivity manufacturing and services raises aggregate output per worker—even without technological change within sectors.</p>
@@ -354,7 +358,9 @@
 
                         <div class="mechanism-item">
                             <div class="mechanism-header">
-                                <span class="mechanism-icon">🎓</span>
+                                <span class="mechanism-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c0 2 2 3 6 3s6-1 6-3v-5"/></svg>
+                                </span>
                                 <h3>Human Capital Accumulation</h3>
                             </div>
                             <p>Investments in education and health raise the productive capacity of the workforce, enabling adoption of more sophisticated technologies and organizational practices.</p>
@@ -368,7 +374,9 @@
 
                         <div class="mechanism-item">
                             <div class="mechanism-header">
-                                <span class="mechanism-icon">💰</span>
+                                <span class="mechanism-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
+                                </span>
                                 <h3>Capital Accumulation</h3>
                             </div>
                             <p>With diminishing returns to capital, investment in capital-scarce economies should yield higher returns. Capital flows from rich to poor countries can accelerate convergence.</p>
@@ -379,7 +387,9 @@
 
                         <div class="mechanism-item">
                             <div class="mechanism-header">
-                                <span class="mechanism-icon">🌐</span>
+                                <span class="mechanism-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><circle cx="12" cy="12" r="10"/><path d="M2 12h20"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/><circle cx="12" cy="12" r="3"/></svg>
+                                </span>
                                 <h3>Global Value Chain Integration</h3>
                             </div>
                             <p>Participation in international production networks transfers knowledge, capital, management practices, and market access to developing economy firms.</p>
@@ -431,7 +441,9 @@
             <div class="traps-grid">
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">🏛️</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M3 21h18M3 10h18M5 6l7-3 7 3M4 10v11M20 10v11M8 14v3M12 14v3M16 14v3"/></svg>
+                        </div>
                         <h3>Institutional Trap</h3>
                     </div>
                     <p>Weak property rights, poor contract enforcement, corruption, and extractive governance deter investment and entrepreneurship. Institutions are persistent and difficult to reform.</p>
@@ -442,7 +454,9 @@
 
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">🎓</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c0 2 2 3 6 3s6-1 6-3v-5"/></svg>
+                        </div>
                         <h3>Human Capital Trap</h3>
                     </div>
                     <p>Low education and health reduce productivity, limiting the returns to investment and the capacity to adopt advanced technologies. Human capital is slow to accumulate.</p>
@@ -453,7 +467,9 @@
 
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">💵</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="6" width="20" height="12" rx="2"/><circle cx="12" cy="12" r="3"/><path d="M6 12h.01M18 12h.01"/></svg>
+                        </div>
                         <h3>Savings Trap</h3>
                     </div>
                     <p>At subsistence income levels, households cannot save enough to finance investment. Without domestic savings, countries depend on volatile external financing.</p>
@@ -464,7 +480,9 @@
 
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">👶</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                        </div>
                         <h3>Demographic Trap</h3>
                     </div>
                     <p>High fertility rates mean rapid population growth absorbs productivity gains, preventing per capita income from rising. Resources go to quantity rather than quality of children.</p>
@@ -475,7 +493,9 @@
 
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">🏭</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M2 20h20M5 20V8l5-4v16M10 20V4l9 4v12M14 9v.01M14 12v.01M14 15v.01M17 9v.01M17 12v.01M17 15v.01"/></svg>
+                        </div>
                         <h3>Middle-Income Trap</h3>
                     </div>
                     <p>Countries that industrialized through low-wage manufacturing struggle to transition to innovation-led growth. Wages rise faster than productivity, eroding competitiveness.</p>
@@ -486,7 +506,9 @@
 
                 <div class="trap-card">
                     <div class="trap-header">
-                        <div class="trap-icon">🛢️</div>
+                        <div class="trap-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M6 3h12l1.5 4.5c.3.9.5 1.8.5 2.5 0 4-3 8-8 8s-8-4-8-8c0-.7.2-1.6.5-2.5L6 3z"/><path d="M6 3c0 2 2 4 6 4s6-2 6-4"/><path d="M12 18v3M8 21h8"/></svg>
+                        </div>
                         <h3>Resource Curse</h3>
                     </div>
                     <p>Natural resource wealth can undermine manufacturing, appreciate exchange rates, fuel corruption, and fund conflict—paradoxically slowing growth.</p>
@@ -837,21 +859,27 @@
                 <div class="scenarios-grid">
                     <div class="scenario">
                         <div class="scenario-header optimistic">
-                            <span class="scenario-icon">📈</span>
+                            <span class="scenario-icon">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M23 6l-9.5 9.5-5-5L1 18"/><path d="M17 6h6v6"/></svg>
+                            </span>
                             <h4>Continued Convergence</h4>
                         </div>
                         <p>India, Bangladesh, Vietnam, Ethiopia, and others follow East Asian path. Digital technology accelerates diffusion. Africa captures manufacturing as China moves upmarket. Global poverty falls below 3% by 2050.</p>
                     </div>
                     <div class="scenario">
                         <div class="scenario-header baseline">
-                            <span class="scenario-icon">➡️</span>
+                            <span class="scenario-icon">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+                            </span>
                             <h4>Selective Convergence</h4>
                         </div>
                         <p>Well-governed countries with good fundamentals continue catch-up growth. But fragile states and those hit by climate, conflict, or automation fall further behind. Global inequality remains high as within-group variance increases.</p>
                     </div>
                     <div class="scenario">
                         <div class="scenario-header pessimistic">
-                            <span class="scenario-icon">📉</span>
+                            <span class="scenario-icon">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M23 18l-9.5-9.5-5 5L1 6"/><path d="M17 18h6v-6"/></svg>
+                            </span>
                             <h4>Convergence Stalls</h4>
                         </div>
                         <p>Automation eliminates manufacturing pathway. Climate disruption hits agriculture. Trade fragmentation blocks market access. The 21st century sees renewed divergence as AI-powered rich economies pull further ahead.</p>
